# dashtext

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  PLAN-db-migration.md  README.md  dashtext.pub  drizzle.config.ts  package-lock.json  package.json  playwright.config.js  svelte.config.js  tsconfig.json  vite.config.js  wrangler.jsonc  wrangler.toml
.beads/: QUICKSTART.md  deletions.jsonl  issues.jsonl
.claude/commands/: sanity.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  zizmor.yml
docs/: architecture-review-tauri-web-split.md
docs/plans/: 2024-12-02-shadcn-sidebar-adoption.md  2024-12-02-sqlite-persistence-design.md  2024-12-02-sqlite-persistence-implementation.md  2025-01-03-route-refactor-design.md  2025-01-03-route-refactor-implementation.md  2025-01-08-monorepo-migration.md
history/: CODEBASE_ASSESSMENT.md  automerge-spec.md
history/archive/: README.md  sync-implementation-spec.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20241202000000_create_draft.sql
src-tauri/src/: db.rs  lib.rs  main.rs  updater.rs
src/lib/: platform.ts  utils.ts
src/lib/api/: drafts.ts  index.ts  types.ts
src/lib/api/backends/: indexeddb.ts  mock.ts  tauri.ts
src/lib/components/: app-sidebar.svelte  draft-list-item.svelte
src/lib/components/appbar/: AppBar.svelte  index.ts
src/lib/components/capture/: CaptureEditor.svelte  extensions.ts  index.ts
src/lib/components/editor/: Editor.svelte  VimModeIndicator.svelte  codemirror-theme.ts  context.svelte.ts  extensions.ts  index.ts
src/lib/components/layout/: Aside.svelte  FooterBar.svelte  MenuBar.svelte  Sidebar.svelte  index.ts
src/lib/components/updater/: UpdateDialog.svelte  VersionIndicator.svelte  (+1 more)
src/lib/db/: index.ts
src/lib/stores/: drafts.svelte.ts  ui.svelte.ts  updater.svelte.ts
src/lib/styles/: theme.css
src/routes/: +layout.svelte  +page.svelte  +page.ts  SidebarItem.svelte  StatusLine.svelte  WinBar.svelte  layout.css
src/routes/(editor)/: +layout.svelte  StatusLine.svelte  WinBar.svelte  WindowControls.svelte
src/routes/capture/: +layout.svelte  +page.svelte
src/styles/: codemirror.css  layout.css
test/specs/: screenshots.e2e.js
(+17 files in other folders)
