[package]
name = "dashtext"
version = "0.3.0"
description = "A cross-platform text editor for capturing drafts"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dashtext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
flate2 = "1"
fs2 = "0.4"
futures-util = "0.3"
hex = "0.4"
minisign-verify = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tempfile = "3"
